<resources>
    <string name="app_name">Ether Cyrcus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name_not_loaded">loading username...</string>
    <string name="user_name_not_registered">not yet registered...</string>
    <string name="register_button">register</string>
    <string name="publication">publication</string>
    <string name="tag">tag</string>
    <string name="sort_by">sort by</string>

    <string name="title_activity_view_content">ViewContentActivity</string>
    <string name="title_activity_edit_content">EditContentActivity</string>
    <string name="picture_transition_name">content_image</string>
    <string name="subscribed_publications">Subscribed publications</string>
    <string name="all_publications">All Publications</string>
    <string name="selectPublication">select publication</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="supportPostButton">Support post</string>
    <string name="savePublicationButton">Save publication</string>
    <string name="search">Search</string>
    <string name="saved_publications">Saved publications</string>
    <string name="welcome_to">Welcome to</string>
    <string name="beta_nework">Beta Network!</string>
    <string name="proceed">Proceed</string>
    <string name="needToCreateAnAccount">No Account yet - click Account in the top right</string>
    <string name="requiresRegistration">Requires Registration - please click register on the user tab</string>
    <string name="requiresEth">ETH balance is zero. Send ETH to your address or use the acquire eth button below.</string>
</resources>
