<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:context="com.example.cameron.ethereumtest1.activities.ViewContentActivity">

        <ImageView
            android:id="@+id/image_content_activity"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:transitionName="@string/picture_transition_name"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@android:color/transparent"
            android:src="@color/photoScreen"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:onClick="close"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="24dp"
            android:textColor="@android:color/white"
            android:textSize="12dp"
            android:layout_alignParentLeft="true"
            android:layout_alignBottom="@id/image_content_activity"/>

        <TextView
            android:id="@+id/contentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:textColor="@android:color/white"
            android:textSize="28dp"
            android:layout_above="@+id/date" />

        <ImageView
            android:id="@+id/shadowDraw"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_below="@id/image_content_activity"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            android:textColor="@color/darkGray"
            android:textSize="12dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/shadowDraw"/>

        <WebView
            android:id="@+id/contentBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_margin="15dp"
            android:layout_below="@id/author"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/supporters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_below="@id/contentBody"/>
        <TextView
            android:id="@+id/revenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_below="@id/supporters"/>
        <TextView
            android:id="@+id/supportPostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_below="@id/revenue"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/supportPostButton"
            android:textColor="@android:color/white"
            android:background="@drawable/subscribe_button"
            android:onClick="supportPost"/>

        <TextView
            android:id="@+id/savePublicationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_below="@id/revenue"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/savePublicationButton"
            android:textColor="@android:color/white"
            android:background="@drawable/subscribe_button"
            android:onClick="supportPost"/>

        <TextView
            android:id="@+id/commentsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/supportPostButton"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:onClick="viewComments"/>
        <ListView
            android:id="@+id/commentsListView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/commentsButton"
            android:visibility="gone">

        </ListView>

    </RelativeLayout>

</ScrollView>



